--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
+
+<html>
+<head>
+<title>
+SWF2JS
+</title>
+</head>
+<body bgcolor=#000000> 
+<center>
 <script type="text/javascript" src="swf2js.js"></script>
 <script type="text/javascript">
-    swf2js.load('FFSX6.swf');
-</script> 
+    swf2js.load('game.swf');
+</script>  
+</center>
+</body>
+</html>
