--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ SWF2JS
 <center>
 <script type="text/javascript" src="swf2js.js"></script>
 <script type="text/javascript">
-    swf2js.load('game.swf');
+    swf2js.load('FFSX6.swf');
 </script>  
 </center>
 </body>
